--- a/PictureEncryption2019/PictureEncryption2019.csproj
+++ b/PictureEncryption2019/PictureEncryption2019.csproj
@@ -104,7 +104,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -126,15 +126,13 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\client_id.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="MetroFramework.txt" />
+    <EmbeddedResource Include="Resources\client_id.json" />
     <None Include="Resources\icoGoogleDrive.png" />
   </ItemGroup>
   <ItemGroup />
